--- a/package.json
+++ b/package.json
@@ -1,35 +1,23 @@
 {
-  "name": "discord-server-logger",
+  "name": "solgamble",
   "version": "1.0.0",
-  "description": "A Discord bot that monitors and logs server events like message edits, bans, kicks, role changes, and more.",
+  "description": "",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "lint": "eslint . --ext .js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "keywords": [
-    "discord",
-    "bot",
-    "server",
-    "moderation",
-    "logging",
-    "audit",
-    "monitor"
-  ],
-  "author": "Your Name <you@example.com>",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
-    "discord.js": "^14.18.0",
-    "dotenv": "^16.0.3"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "nodemon": "^3.0.2"
+    "chalk": "^5.4.1",
+    "colors": "^1.4.0",
+    "discord.js": "^14.19.3",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.14.2",
+    "stripe": "^18.1.0"
   }
 }
